--- a/public/css/color-aqua.css
+++ b/public/css/color-aqua.css
@@ -78,7 +78,7 @@ a.btn_map_in,
 
 a.btn_add,
 .btn_add {
-  background: #1cbbb4;
+  background: #0d0776;
 }
 
 a.btn_filt:hover, a.btn_filt_map:hover {
