--- a/public/css/color-navy.css
+++ b/public/css/color-navy.css
@@ -5,7 +5,7 @@ header.sticky .main-menu > ul > li span > a {
 }
 header.sticky .main-menu > ul > li span:hover > a {
   opacity: 1;
-  color: #4a5d7d;
+  color: #7d4a4a;
 }
 
 .main-menu ul ul li:hover > a {
