--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -14108,6 +14108,7 @@ body[data-layout-mode=horizontal][data-layout-color=light][data-topbar-color=dar
   .topnav-menu .navbar-nav li:last-of-type .dropdown .dropdown-menu {
     right: 100%;
     left: auto;
+    
   }
 }
 @media (max-width: 991.98px) {
@@ -14115,6 +14116,7 @@ body[data-layout-mode=horizontal][data-layout-color=light][data-topbar-color=dar
     max-height: 360px;
     overflow-y: auto;
     padding: 0;
+    font-size: 30px;
   }
   .topnav .navbar-nav .nav-link {
     padding: 0.75rem 1.1rem;
